<resources>
    <string name="app_name">Práctica registro</string>
    <string name="formulario2">Confirmación de datos</string>
    <string name="formulario3">Ventana de bienvenida</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtDireccion">Dirección</string>
    <string name="txtTelefono">Télefono</string>
    <string name="fecha">Fecha</string>
    <string name="btnfecha">Elegir Fecha</string>
    <string name="btnEnvio">Enviar Datos</string>
    <string name="btnEditar">Editar</string>
    <string name="btnSalir">Salir</string>

</resources>