<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ivonnemc.practica_registro.MainActivity">

    <TextView
        android:layout_width="345dp"
        android:text="Registro"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/background_dark"
        android:textAlignment="center"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:fontFamily="monospace" />

    <EditText
        android:id="@+id/etRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView" />

    <TextView
        android:text="@string/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNom"
        tools:text="@string/txtNombre"
        android:textSize="24sp"
        android:textColor="@android:color/background_dark"
        android:layout_alignBottom="@+id/idNombre"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/idNombre"
        android:hint="@string/txtNombre"
        android:layout_below="@+id/etRegistro"
        android:layout_toEndOf="@+id/btnFecha" />

    <TextView
        android:text="@string/txtDireccion"
        android:layout_width="wrap_content"
        android:textSize="24sp"
        android:textColor="@android:color/background_dark"
        android:layout_height="wrap_content"
        android:id="@+id/txtDirec"
        tools:text="@string/txtDireccion"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/txtNom"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/idDireccion"
        android:hint="@string/txtDireccion"
        android:textColor="?attr/colorButtonNormal"
        android:layout_alignBottom="@+id/txtDirec"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/idNombre" />

    <TextView
        android:text="@string/txtTelefono"
        android:layout_width="wrap_content"
        android:textSize="24sp"
        android:textColor="@android:color/background_dark"
        android:layout_height="wrap_content"
        android:id="@+id/txtTel"
        tools:text="@string/txtTelefono"
        android:layout_alignBottom="@+id/idTelefono"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/idTelefono"
        android:hint="@string/txtTelefono"
        android:textColor="?attr/colorButtonNormal"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/idDireccion"
        android:layout_alignStart="@+id/idDireccion" />

    <TextView
        android:text="@string/fecha"
        android:layout_width="wrap_content"
        android:textSize="24sp"
        android:textColor="@android:color/background_dark"
        android:layout_height="wrap_content"
        android:id="@+id/idtxtFech"
        android:layout_alignBaseline="@+id/idFecha"
        android:layout_alignBottom="@+id/idFecha"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/idFecha"
        android:textColor="?attr/colorButtonNormal"
        android:layout_below="@+id/idTelefono"
        android:layout_marginTop="41dp"
        android:layout_toEndOf="@+id/btnFecha" />

    <Button
        android:text="@string/btnEnvio"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnEnvio2"
        android:background="@android:color/holo_red_light"
        android:textColor="@android:color/background_light"
        android:layout_below="@+id/idFecha"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="93dp" />

    <Button
        android:text="@string/btnfecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnFecha"
        android:textColor="@android:color/background_light"
        android:onClick="mostrarCalendario"
        android:background="@android:color/holo_blue_light"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/idFecha"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

